--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "telegraf": "^4.8.3"
+    "knex": "^2.1.0",
+    "telegraf": "^4.8.3",
+    "telegraf-i18n": "^6.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
