--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "type": "commonjs",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
   "keywords": [
     "template"
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "knex": "^2.1.0",
+    "pg": "^8.7.3",
     "telegraf": "^4.8.3",
     "telegraf-i18n": "^6.6.0"
   },
