--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,9 @@
-BOT_TOKEN=sss
+BOT_TOKEN=
 ADMINS=1786445409
+CHANNEL=-1001701835574
 
-DATABASE_PORT=5432
-DATABASE_NAME=bot_chefs
-DATABASE_USER=postgres
+DATABASE_PORT=3306
+DATABASE_NAME=
+DATABASE_USER=firsturdiev
 DATABASE_HOST=127.0.0.1
 DATABASE_PASSWORD=
